--- a/app/src/main/res/drawable/bottom_border.xml
+++ b/app/src/main/res/drawable/bottom_border.xml
@@ -2,12 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="#A1A1A1"/>
+            <solid android:color="@color/dark_blue1"/>
         </shape>
     </item>
     <item android:bottom="1dp">
         <shape android:shape="rectangle" >
-            <solid android:color="#FFFFFF" />
+            <solid android:color="@color/white" />
         </shape>
     </item>
 </layer-list>
