--- a/app/src/main/res/layout/activity_car_details.xml
+++ b/app/src/main/res/layout/activity_car_details.xml
@@ -44,11 +44,11 @@
                 android:id="@+id/slider"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
                 android:layout_marginTop="20dp"
                 app:iss_auto_cycle="true"
-                app:iss_corner_radius="20"
+                app:iss_corner_radius="15"
                 app:iss_delay="0"
                 app:iss_period="2000"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -69,47 +69,47 @@
                     android:id="@+id/tvcdBMY"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
+                    android:paddingLeft="40dp"
                     android:text="Brand Model Year"
                     android:fontFamily="@font/poppins_regular"
                     android:textColor="@color/dark_blue1"
-                    android:textSize="20dp"
+                    android:textSize="22dp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tvcdLocation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
+                    android:paddingLeft="40dp"
                     android:text="Location"
                     android:fontFamily="@font/poppins_regular"
                     android:textColor="@color/dark_blue1"
-                    android:textSize="15dp" />
+                    android:textSize="18dp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
+                    android:paddingLeft="40dp"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="10dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
                         android:fontFamily="@font/poppins_regular"
-                        android:text="₱ "
+                        android:text="Php "
                         android:textColor="@color/violet"
-                        android:textSize="15dp" />
+                        android:textSize="16dp" />
 
                     <TextView
                         android:id="@+id/tvcdPricing"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
-                        android:text="Price"
                         android:fontFamily="@font/poppins_regular"
+                        android:text="Price"
                         android:textColor="@color/violet"
-                        android:textSize="15dp" />
+                        android:textSize="16dp" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -119,19 +119,18 @@
                         android:fontFamily="@font/poppins_regular"
                         android:paddingLeft="5dp"
                         android:textColor="@color/dark_blue1"
-                        android:textSize="15dp" />
+                        android:textSize="16dp" />
 
                 </LinearLayout>
 
-
-
+                
                 <LinearLayout
                     android:id="@+id/llCarSpecs"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
+                    android:paddingLeft="40dp"
+                    android:paddingRight="40dp"
                     android:paddingBottom="20dp"
                     android:paddingTop="20dp"
                     android:background="@drawable/top_bot_border"
@@ -142,7 +141,7 @@
                         android:layout_height="wrap_content"
                         android:text="CAR SPECS"
                         android:fontFamily="@font/poppins_regular"
-                        android:textSize="13sp"
+                        android:textSize="14sp"
                         android:textColor="@color/dark_blue1"
                         android:textStyle="bold"/>
 
@@ -151,6 +150,8 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_marginTop="15dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
                         android:gravity="center">
 
                         <LinearLayout
@@ -236,6 +237,8 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:gravity="center"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
                         android:layout_marginTop="20dp">
 
 
@@ -299,8 +302,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
+                    android:paddingLeft="40dp"
+                    android:paddingRight="40dp"
                     android:paddingBottom="20dp"
                     android:paddingTop="20dp"
                     android:background="@drawable/bottom_border"
@@ -311,7 +314,7 @@
                         android:layout_height="wrap_content"
                         android:text="DISTANCE PER DAY"
                         android:fontFamily="@font/poppins_regular"
-                        android:textSize="13sp"
+                        android:textSize="14dp"
                         android:textColor="@color/dark_blue1"
                         android:textStyle="bold"/>
 
@@ -338,8 +341,8 @@
                     android:id="@+id/llDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingRight="20dp"
-                    android:paddingLeft="20dp"
+                    android:paddingRight="40dp"
+                    android:paddingLeft="40dp"
                     android:paddingBottom="20dp"
                     android:paddingTop="20dp"
                     android:background="@drawable/bottom_border"
@@ -350,7 +353,7 @@
                         android:layout_height="wrap_content"
                         android:text="DESCRIPTION"
                         android:fontFamily="@font/poppins_regular"
-                        android:textSize="13sp"
+                        android:textSize="14sp"
                         android:textColor="@color/dark_blue1"
                         android:textStyle="bold"/>
 
@@ -380,10 +383,10 @@
                         android:layout_height="wrap_content"
                         android:text="HOSTED BY: "
                         android:fontFamily="@font/poppins_regular"
-                        android:textSize="13sp"
+                        android:textSize="14dp"
                         android:textStyle="bold"
                         android:textColor="@color/dark_blue1"
-                        android:layout_marginLeft="20dp"/>
+                        android:layout_marginLeft="40dp"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -396,7 +399,7 @@
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             app:cardCornerRadius="30dp"
-                            android:layout_marginLeft="20dp">
+                            android:layout_marginLeft="40dp">
 
                             <ImageView
                                 android:id="@+id/ivHost"
@@ -426,8 +429,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     android:layout_marginTop="20dp"
                     android:orientation="horizontal"
                     android:gravity="center"
@@ -436,13 +439,14 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="20dp"
                         android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="10dp"
-                            android:text="₱ "
+                            android:layout_marginBottom="5dp"
+                            android:text="Php "
                             android:textColor="@color/dark_blue1"
                             android:textSize="20dp" />
 
@@ -450,18 +454,19 @@
                             android:id="@+id/tvPrice"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="10dp"
-                            android:text="Price"
+                            android:layout_marginBottom="5dp"
                             android:fontFamily="@font/poppins_regular"
+                            android:text="Price"
                             android:textColor="@color/dark_blue1"
-                            android:textSize="20dp" />
+                            android:textSize="20dp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="10dp"
-                            android:text="/day"
+                            android:layout_marginBottom="5dp"
                             android:fontFamily="@font/poppins_regular"
+                            android:text="/day"
                             android:textColor="@color/dark_blue1"
                             android:textSize="20dp" />
 
@@ -469,13 +474,13 @@
 
                     <Button
                         android:id="@+id/bookBtn"
-                        android:layout_marginLeft="50dp"
-                        android:layout_width="180dp"
+                        android:layout_width="178dp"
                         android:layout_height="wrap_content"
-                        android:visibility="visible"
+                        android:layout_marginLeft="30dp"
                         android:fontFamily="@font/poppins_regular"
                         android:text="Book now"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold"
+                        android:visibility="visible" />
 
                 </LinearLayout>
 
