--- a/app/src/main/res/layout/car_item.xml
+++ b/app/src/main/res/layout/car_item.xml
@@ -7,8 +7,9 @@
     app:cardElevation="5dp"
     app:cardCornerRadius="15dp"
     android:layout_marginTop="15dp"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp">
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
+    android:layout_marginBottom="10dp">
 
 //change layout
     <LinearLayout
@@ -53,7 +54,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="₱ "
+                android:text="Php "
                 android:textColor="@color/violet"
                 android:textSize="13dp"
                 android:layout_marginBottom="10dp"/>
