--- a/app/src/main/res/layout/fragment__booked_cars.xml
+++ b/app/src/main/res/layout/fragment__booked_cars.xml
@@ -17,13 +17,14 @@
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:fontFamily="sans-serif"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/poppins_regular"
             android:paddingLeft="30dp"
             android:text="Bookings"
-            android:textColor="@color/black"
+            android:textColor="@color/dark_blue1"
             android:textSize="25dp"
             android:textStyle="bold"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
