--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -19,7 +19,7 @@
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:fontFamily="@font/poppins_regular"
             android:text="Explore"
             android:textColor="@color/dark_blue1"
@@ -43,13 +43,16 @@
             tools:layout_editor_absoluteX="0dp">
 
             Search button
+
             <androidx.appcompat.widget.SearchView
                 android:id="@+id/searchView"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:background="@drawable/et_background"
-                app:queryHint="I need car at..."
-                app:iconifiedByDefault="false"/>
+                app:iconifiedByDefault="false"
+                app:queryHint="I need car at..." />
 
         </LinearLayout>
 
