--- a/app/src/main/res/layout/fragment_hosted_cars.xml
+++ b/app/src/main/res/layout/fragment_hosted_cars.xml
@@ -17,8 +17,8 @@
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:fontFamily="@font/poppins_bold"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/poppins_regular"
             android:text="Vehicle hosted"
             android:textAlignment="center"
             android:textColor="@color/dark_blue1"
