--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,6 +25,18 @@
         <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
         <item name="titleTextAppearance">@style/toolbartex</item>
     </style>
+    
+<!--    <style name="SearchAutoCompleteTextView" parent="Widget.AppCompat.Light.AutoCompleteTextView">-->
+<!--        <item name="fontFamily">@font/poppins_regular</item>-->
+<!--        <item name="android:textSize">16sp</item>-->
+<!--        <item name="android:textColor">@color/dark_blue1</item>-->
+<!--        <item name="android:textColorHint">@color/dark_blue1</item>-->
+<!--        <item name="android:backgroundTint">@color/dark_blue1</item>-->
+<!--    </style>-->
+
+<!--    <style name="AppTheme" parent="Theme.AppCompat.Light">-->
+<!--        <item name="autoCompleteTextViewStyle">@style/SearchAutoCompleteTextView</item>-->
+<!--    </style>-->
 
 <!---->
 </resources>
