--- a/app/src/main/res/layout/activity_host_car.xml
+++ b/app/src/main/res/layout/activity_host_car.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:paddingLeft="20dp"
+            android:paddingLeft="40dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/locationHeader"
             android:textSize="24sp"
@@ -53,8 +53,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
             android:justificationMode="inter_word"
             android:text="@string/locationSubHeader"
             android:textSize="16sp"
@@ -71,8 +71,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:orientation="vertical"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/subHeader">
@@ -109,8 +109,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="vertical"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/llAddressLine1">
@@ -147,8 +147,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="vertical"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/llAddressLine2">
@@ -186,8 +186,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="vertical"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/llCity">
@@ -223,8 +223,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="vertical"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/llProvince">
@@ -261,8 +261,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="vertical"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/llMunicipality">
@@ -298,7 +298,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:paddingLeft="20dp"
+            android:paddingLeft="40dp"
             android:fontFamily="@font/poppins_regular"
             android:text="About your car"
             android:textSize="24sp"
@@ -315,7 +315,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="vertical"
-            android:paddingLeft="20dp"
+            android:paddingLeft="40dp"
             android:paddingBottom="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -416,7 +416,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingLeft="20dp"
+            android:paddingLeft="40dp"
             android:paddingBottom="10dp"
             android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -531,7 +531,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Specifications"
-                android:paddingLeft="20dp"
+                android:paddingLeft="40dp"
                 android:fontFamily="@font/poppins_regular"
                 android:textStyle="bold"
                 android:textSize="15sp"
@@ -543,7 +543,7 @@
                 android:id="@+id/ll1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
@@ -580,7 +580,7 @@
                 android:id="@+id/ll2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="40dp"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -617,8 +617,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:paddingLeft="40dp"
+                android:paddingRight="40dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ll2">
@@ -650,7 +650,7 @@
                 android:id="@+id/ll4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
@@ -687,7 +687,7 @@
                 android:id="@+id/ll5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="40dp"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -724,7 +724,7 @@
                 android:id="@+id/ll6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
@@ -759,7 +759,7 @@
                 android:id="@+id/ll7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="40dp"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -798,8 +798,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:paddingLeft="40dp"
+                android:paddingRight="40dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ll7">
@@ -836,8 +836,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:paddingLeft="40dp"
+                android:paddingRight="40dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ll8">
@@ -860,7 +860,7 @@
                         android:id="@+id/etMileage"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily=""
+                        android:fontFamily="@font/poppins_regular"
                         android:inputType="none"
                         android:textColor="@color/dark_blue1"
                         android:textSize="15sp" />
@@ -873,8 +873,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:paddingLeft="40dp"
+                android:paddingRight="40dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ll9">
@@ -907,7 +907,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_regular"
                 android:text="Upload car photos *"
-                android:paddingLeft="20dp"
+                android:paddingLeft="40dp"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 android:layout_marginTop="20dp"
@@ -919,7 +919,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:paddingLeft="20dp"
+                android:paddingLeft="40dp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="Get the best shots of your car that will make\nheads turn."
                 android:textSize="14sp"
@@ -936,7 +936,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:orientation="vertical"
-                android:paddingLeft="20dp"
+                android:paddingLeft="40dp"
                 android:paddingBottom="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -1036,7 +1036,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="20dp"
+                android:paddingLeft="40dp"
                 android:paddingBottom="10dp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -1143,7 +1143,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:paddingLeft="20dp"
+            android:paddingLeft="40dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/insuranceHeader"
             android:textSize="24sp"
@@ -1161,7 +1161,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="vertical"
-            android:paddingLeft="20dp"
+            android:paddingLeft="40dp"
             android:paddingBottom="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -1244,7 +1244,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="vertical"
-            android:paddingLeft="20dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
             android:paddingBottom="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -1319,7 +1320,7 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
+            android:paddingLeft="40dp"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/poppins_regular"
             android:text="Insured amount *"
@@ -1334,7 +1335,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:orientation="horizontal"
-            android:paddingLeft="30dp"
+            android:paddingLeft="40dp"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
             tools:layout_editor_absoluteX="0dp">
 
@@ -1366,7 +1367,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:paddingLeft="20dp"
+            android:paddingLeft="40dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/protectionHeader"
             android:textSize="24sp"
@@ -1383,7 +1384,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="20dp"
-            android:paddingLeft="20dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
             app:layout_constraintTop_toBottomOf="@+id/protectionHeader">
 
             <RadioGroup
@@ -1491,7 +1493,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:paddingLeft="20dp"
+            android:paddingLeft="40dp"
             android:fontFamily="@font/poppins_regular"
             android:text="Track your car"
             android:textSize="24sp"
@@ -1507,8 +1509,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/trackSubHeader"
             android:textSize="16sp"
@@ -1526,7 +1528,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="20dp"
-            android:paddingLeft="20dp"
+            android:paddingLeft="40dp"
             app:layout_constraintTop_toBottomOf="@+id/trackCarSubHeader">
 
             <RadioGroup
@@ -1564,7 +1566,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:paddingLeft="20dp"
+            android:paddingLeft="40dp"
             android:fontFamily="@font/poppins_regular"
             android:text="Description"
             android:textSize="24sp"
@@ -1580,8 +1582,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/descSubHeader"
             android:textSize="16sp"
@@ -1604,8 +1606,8 @@
             android:maxLines="4"
             android:paddingLeft="15dp"
             android:paddingTop="15dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
             android:background="@drawable/textbox"
             android:gravity="left|top"
             app:layout_constraintEnd_toEndOf="parent"
@@ -1617,7 +1619,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:paddingLeft="20dp"
+            android:paddingLeft="40dp"
             android:fontFamily="@font/poppins_regular"
             android:text="Pricing"
             android:textSize="24sp"
@@ -1633,8 +1635,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
             android:fontFamily="@font/poppins_regular"
             android:text="Set a daily rate. You'll earn up to 75% of total price"
             android:textSize="16sp"
@@ -1650,7 +1652,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pricingSubHeader">
